--- a/src/styles/cmps/ItemList.css
+++ b/src/styles/cmps/ItemList.css
@@ -8,3 +8,9 @@
     flex-wrap: wrap;
 
 }
+
+@media(max-width:450px) {
+    .item-list {
+        padding-left: 13%;
+    }
+}
